--- a/android.css
+++ b/android.css
@@ -96,3 +96,11 @@ div div {
 .r_arm {
   right: -60px;
 }
+
+.l_arm:hover {
+  transform: rotate(90deg) translate(-50px, 45px);
+}
+
+.r_arm:hover {
+  transform: rotate(270deg) translate(50px, 45px);
+}
